fix: button gap

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -61,7 +61,7 @@
         flex-direction: column; /* Stack in reverse order for smaller screens */
         height: auto; /* Allow flexible height for stacking */
         justify-content: center; /* Center-align elements vertically */
-        gap: 20px; /* Adjust gap for smaller screens */
+        gap: 100px; /* Adjust gap for smaller screens */
         padding: 20px; /* Add some padding for better spacing */
         padding-top: 0
     }
@@ -143,7 +143,6 @@
         flex-direction: column; /* Stack vertically */
         height: auto; /* Allow height to adjust */
         padding: 40px 20px; 
-        gap: 50px; /* Space between elements */
     }
 
     btn.hero-btn {
